@@ -21,6 +21,126 @@
  <para>This chapter describes features of the &qm; applications that are
  common to &qmtest; and &qmtrack;.</para>
 
+ <section id="sec-rc">
+  <title>The &qm; Configuration File</title>
+
+  <para>&qm; allows you to set up a per-user configuration file that
+  contains your personal preferences, defaults, and settings.</para>
+
+  <para>On UNIX-like platforms, this file is named
+  <filename>.qmrc</filename>, and resides in your home directory.  On
+  Win32 platforms, ... &fixme;.</para>
+
+  <para>The &qm; configuration file is a plain text file, with a format
+  similar to that used in Microsoft Windows <filename>.INI</filename>
+  files.  It is divided into sections by headings in square brackets.
+  Three sections are supported: <literal>[common]</literal> contains
+  configuration variables common to both the &qm; tools, while
+  <literal>[test]</literal> and <literal>[track]</literal> contain
+  configuration variables specific to one tool or the other.  Within
+  each section, configuration variables are set using the syntax
+  <literal><replaceable>variable</replaceable>=<replaceable>value</replaceable></literal>.</para>
+
+  <para>Here's an example of a &qm; configuration file:</para>
+
+  <screen>
+&prompt;<userinput>cat ~/.qmrc</userinput>
+<computeroutput>[common]
+browser=/usr/local/bin/netscape
+
+[test]
+path=/usr/bin:/bin
+</computeroutput></screen>
+
+  <section id="sec-rc-common">
+   <title>Common Configuration Variables</title>
+
+   <para>These configuration variables are used in both &qm; tools.  You
+   should define them in the <literal>[common]</literal> section of your
+   &qm; configuration file.</para>
+
+   <glosslist>
+
+    <glossentry>
+     <glossterm>
+      <property>browser</property> (UNIX-like platforms only)
+     </glossterm>
+     <glossdef>
+      <para>The path to your preferred web browser.  If omitted, &qm;
+      makes an attempt to locate a browser on your computer.</para>
+     </glossdef>
+    </glossentry>
+
+    <glossentry>
+     <glossterm>
+      <property>sendmail</property> (UNIX-like platforms only)
+     </glossterm>
+     <glossdef>
+      <para>The path to the <filename>sendmail</filename> program, or a
+      compatible replacement.  This program is used for sending email
+      messages.  The default value is
+      <filename>/usr/lib/sendmail</filename>.</para>
+     </glossdef>
+    </glossentry>
+
+    <glossentry>
+     <glossterm>
+      <property>remote_shell</property> (UNIX-like platforms only)
+     </glossterm>
+     <glossdef>
+      <para>The program used for running commands on remote computers.
+      The program must accept the same syntax as the standard
+      <filename>rsh</filename> command, and should be configured to run
+      the command remotely without any additional interaction (such as
+      requesting a password from the TTY).  The default value is
+      <filename>/usr/bin/ssh</filename>.</para>
+     </glossdef>
+    </glossentry>
+
+   </glosslist>
+
+  </section> <!-- sec-rc-common -->
+
+  <section id="sec-rc-test">
+   <title>&qmtest; Configuration Variables</title>
+
+   <para>These configuration variables are used in &qmtest;.  You should
+   define them in the <literal>[test]</literal> section of your &qm;
+   configuration file.</para>
+
+   <glosslist>
+
+    <glossentry>
+     <glossterm>
+      <property>path</property>
+     </glossterm>
+     <glossdef>
+      <para>The path in which to search for executable files.  Many test
+      classes use this path as a default when searcing for a test target
+      executable.</para>
+     </glossdef>
+    </glossentry>
+
+   </glosslist>
+
+  </section> <!-- sec-rc-test -->
+
+  <section id="sec-rc-track">
+   <title>&qmtrack; Configuration Variables</title>
+
+   <para>These configuration variables are used in &qmtrack;.  You
+   should define them in the <literal>[track]</literal> section of your
+   &qm; configuration file.</para>
+
+   <!--
+   <glosslist>
+   </glosslist>
+   -->
+
+  </section> <!-- sec-rc-track -->
+
+ </section> <!-- sec-rc -->
+
  <section id="sec-user-database">
   <title>The User Database</title>
 
@@ -57,6 +177,7 @@
      below:</para>
 
      <glosslist>
+
       <glossentry>
        <glossterm>
         <property>name</property>
@@ -74,6 +195,7 @@
         <para>The user's Internet email address.</para>
        </glossdef>
       </glossentry>
+
      </glosslist>
     </listitem>
 
